change image to build in compos config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 proxy:
-  image: 192.168.87.207:5000/identiproxy
+  build: identiproxy/
   links:
     - identidock
   ports:
     - "80:80"
 identidock:
-  image: 192.168.87.207:5000/identidock:newest
+  build: .
   environment:
     ENV: DEV
   volumes:
